Change url format

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@ safe:        true
 #auto:        true
 #lsi:         true
 paginate:    3
-permalink: /blog/:year-:month-:day-:title.html
+permalink: /blog/:year-:month-:day-:title
 default_locale: fr
 
 gems: [jekyll-paginate]
